<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:background="#7FC6BC">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="45sp"
        android:text="Inbox Statistics"
        android:layout_marginTop="20dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/totalAverageLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/txtTotalAverageLength"
        android:layout_below="@+id/totalAverageLength"
        />

    <TextView
        android:id="@+id/totalMessageRatio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:textSize="20sp"
        android:layout_below="@string/txtTotalAverageLength"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:textSize="20sp"
        android:text="@string/txtTotalMessageRatio"
        android:layout_below="@+id/totalMessageRatio"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:id="@+id/contactButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtContactButton"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/button2"
            android:background="#7FC6BC"/>

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtHomeNow"
            android:layout_marginTop="20dp"
            android:src="@drawable/back"
            android:background="#7FC6BC"/>


    </LinearLayout>
</LinearLayout>